feat:获取杆塔表格设备详情
