# be/api/doc/swagger.json
@@ -483,7 +483,7 @@
         ]
       }
     },
-    "/api/tower-equipment/list": {
+    "/api/tower-equipment/list/{id}": {
       "get": {
         "operationId": "listEquipmentByTowerId",
         "responses": {
@@ -496,12 +496,10 @@
         },
         "parameters": [
           {
-            "name": "tower_id",
-            "description": " 杆塔ID",
-            "in": "query",
+            "name": "id",
+            "in": "path",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "string"
           }
         ],
         "tags": [
@@ -1684,32 +1682,28 @@
     },
     "ListEquipmentByTowerIdReq": {
       "type": "object",
-      "properties": {
-        "tower_id": {
-          "type": "integer",
-          "format": "int64",
-          "description": " 杆塔ID"
-        }
-      },
-      "title": "ListEquipmentByTowerIdReq",
-      "required": [
-        "tower_id"
-      ]
+      "title": "ListEquipmentByTowerIdReq"
     },
     "ListEquipmentByTowerIdResp": {
       "type": "object",
       "properties": {
-        "equipments": {
+        "pageData": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/TowerEquipment"
+            "$ref": "#/definitions/EquipmentDetail"
           },
           "description": " 设备列表"
+        },
+        "total": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 总数"
         }
       },
       "title": "ListEquipmentByTowerIdResp",
       "required": [
-        "equipments"
+        "pageData",
+        "total"
       ]
     },
     "ListEquipmentClassesReq": {
@@ -2094,48 +2088,6 @@
         "check_user_id",
         "principal_id",
         "plan_time",
-        "create_time",
-        "update_time"
-      ]
-    },
-    "TowerEquipment": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "description": " 主键ID"
-        },
-        "tower_id": {
-          "type": "integer",
-          "format": "int64",
-          "description": " 杆塔ID"
-        },
-        "equipment_id": {
-          "type": "integer",
-          "format": "int64",
-          "description": " 设备管理ID"
-        },
-        "principal_id": {
-          "type": "integer",
-          "format": "int64",
-          "description": " 负责人ID"
-        },
-        "create_time": {
-          "type": "string",
-          "description": " 创建时间"
-        },
-        "update_time": {
-          "type": "string",
-          "description": " 更新时间"
-        }
-      },
-      "title": "TowerEquipment",
-      "required": [
-        "id",
-        "tower_id",
-        "equipment_id",
-        "principal_id",
         "create_time",
         "update_time"
       ]
