# fe/src/views/project/tower/api.js
@@ -9,11 +9,14 @@
 import { request } from '@/utils'
 
 export default {
-  create: data => request.post('/user', data),
+  create: data => request.post('/api/tower-details', data),
   read: (params = {}) => request.get('/api/tower-details', { params }),
-  update: data => request.patch(`/user/${data.id}`, data),
-  delete: id => request.delete(`/user/${id}`),
+  update: data => request.patch(`/api/tower-details/${data.id}`, data),
+  delete: id => request.delete(`/api/tower-details/${id}`),
   resetPwd: (id, data) => request.patch(`/user/password/reset/${id}`, data),
 
   getAllRoles: () => request.get('/role?enable=1'),
+
+  // 绑定设备
+  readDeviceList: id => request.get(`/api/tower-equipment/list/${id}`),
 }
